redis-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-cluster-ingress
  namespace: default
spec:
  rules:
  - host: redis.minikube.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redis-cluster
            port:
              number: 6379
